fixe start button overlapping highscore due to possibilities text

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ h3 {
     background-color: black;
     color: green;
     font-size: 20px;
-    height: 350px;
+    height: 370px;
     position: absolute;
     top: 320px;
     left: 15px;
